# CMACBench

./: .gitignore  README.md  pyproject.toml
code/biosoundsegbench/: __init__.py  conv_temporal_conv_net.py  eval.py  multistack_temporal_conv_net.py  skip_temporal_conv_net.py  train.py
data/configs/Bengalese-Finch-Song/: BFSongRepo_bl26lb16.toml  BFSongRepo_gr41rd51.toml  BFSongRepo_gy6or6.toml  BFSongRepo_or60yw70.toml  config_BirdsongRecognition_Bird0.toml  config_BirdsongRecognition_Bird4.toml  config_BirdsongRecognition_Bird7.toml  config_BirdsongRecognition_Bird9.toml  config_BirdsongRecognition_bird00.toml  config_BirdsongRecognition_bird04.toml  config_BirdsongRecognition_bird07.toml  config_BirdsongRecognition_bird09.toml
data/configs/Canary-Song/: llb11.toml  llb16.toml  llb3.toml
data/raw/: README.md
src/biosoundsegbench/: __init__.py  eval.py  learncurve.py  loss.py  model.py  predict.py  result.py  temporal_conv_net.py  train.py
src/biosoundsegbench/datapipes/: __init__.py  infer_datapipe.py  train_datapipe.py
src/biosoundsegbench/dataset/: __init__.py  biosoundsegbench.py
src/biosoundsegbench/models/: __init__.py  boundary_detection.py  frame_classification.py
src/biosoundsegbench/prep/: __init__.py  clean.py  constants.py  copy_audio_copy_make_annot.py  dirs.py  labels.py  make_inputs_and_targets.py  parser.py  qc.py  split.py
src/biosoundsegbench/transforms/: __init__.py  boundary_detection.py  functional.py  item.py  transforms.py
src/cmacbench/prep/: __init__.py  clean.py  constants.py  copy_audio_copy_make_annot.py  dirs.py  labels.py  (+4 more)
(+21 files in other folders)
