[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cmacbench"
description = "Code to generate the Computational Methods for Acoustic Communication Benchmark (CMACBench)"
authors = [{name = "David Nicholson", email = "nickledave@users.noreply.github.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.1"
dependencies = [
    "pandas==2.0.2",
    "jupyterlab==4.0.1",
    "seaborn==0.12.2",
    "vak==1.0.0",
    "vocalpy==0.9.3",
]
